[tool.poetry]
name = "flaskproject1"
version = "0.1.0"
description = ""
authors = ["Joe Ji <j112929@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pymongo = "^4.4.0"
db = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
